# SPhyR

./: CMakeLists.txt  Doxyfile.in  FindPythonLibsNew.cmake  LICENSE  README.md
data/: README.md
data/CRC/: CRC1.SCITE.input  CRC1.SCITE.output  CRC1.SPhyR.input  CRC1.SiFit.input  CRC1_SNV.labels  CRC1_cell.labels  README.md  parse_CRC_figures.ipynb
data/flip/: generate.sh  m50_n100_1_k1_seed1_loss0.1_a0.001_b0.3.B  m50_n100_1_k1_seed1_loss0.2_a0.001_b0.1.B  m50_n100_1_k1_seed1_loss0.2_a0.001_b0.2.B  m50_n100_1_k1_seed1_loss0.4_a0.001_b0.1.B  m50_n100_1_k1_seed1_loss0.4_a0.001_b0.2.B  m50_n100_1_k1_seed1_loss0.4_a0.001_b0.3.B  m50_n100_1_k1_seed2_loss0.1_a0.001_b0.1.B  m50_n100_1_k1_seed2_loss0.1_a0.001_b0.2.B  m50_n100_1_k1_seed2_loss0.1_a0.001_b0.3.B  m50_n100_1_k1_seed2_loss0.2_a0.001_b0.1.B  m50_n100_1_k1_seed2_loss0.2_a0.001_b0.2.B  m50_n100_1_k1_seed2_loss0.2_a0.001_b0.3.B  m50_n100_1_k1_seed2_loss0.4_a0.001_b0.1.B  m50_n100_1_k1_seed2_loss0.4_a0.001_b0.2.B  m50_n100_1_k1_seed2_loss0.4_a0.001_b0.3.B  m50_n100_1_k1_seed3_loss0.1_a0.001_b0.1.B  m50_n100_1_k1_seed3_loss0.1_a0.001_b0.2.B  m50_n100_1_k1_seed3_loss0.1_a0.001_b0.3.B  m50_n100_1_k1_seed3_loss0.2_a0.001_b0.1.B  m50_n100_1_k1_seed3_loss0.2_a0.001_b0.2.B  m50_n100_1_k1_seed3_loss0.2_a0.001_b0.3.B  m50_n100_1_k1_seed3_loss0.4_a0.001_b0.1.B  m50_n100_1_k1_seed3_loss0.4_a0.001_b0.2.B  m50_n100_1_k1_seed3_loss0.4_a0.001_b0.3.B  m50_n100_1_k2_seed1_loss0.1_a0.001_b0.1.B  m50_n100_1_k2_seed1_loss0.1_a0.001_b0.3.B  m50_n100_1_k2_seed1_loss0.2_a0.001_b0.3.B  m50_n100_1_k2_seed1_loss0.4_a0.001_b0.1.B  m50_n100_1_k2_seed1_loss0.4_a0.001_b0.2.B  m50_n100_1_k2_seed1_loss0.4_a0.001_b0.3.B  m50_n100_1_k2_seed2_loss0.1_a0.001_b0.1.B  m50_n100_1_k2_seed2_loss0.1_a0.001_b0.2.B  m50_n100_1_k2_seed2_loss0.1_a0.001_b0.3.B  m50_n100_1_k2_seed2_loss0.2_a0.001_b0.1.B  m50_n100_1_k2_seed2_loss0.2_a0.001_b0.2.B  m50_n100_1_k2_seed2_loss0.2_a0.001_b0.3.B  m50_n100_1_k2_seed2_loss0.4_a0.001_b0.1.B  m50_n100_1_k2_seed2_loss0.4_a0.001_b0.2.B  m50_n100_1_k2_seed2_loss0.4_a0.001_b0.3.B  (+1920 more)
data/k_dollo/: generate.sh  m100_n100_1_k1_seed1_loss0.1.B  m100_n100_1_k1_seed1_loss0.1.dot  m100_n100_1_k1_seed1_loss0.2.B  m100_n100_1_k1_seed1_loss0.2.dot  m100_n100_1_k1_seed1_loss0.4.B  m100_n100_1_k1_seed1_loss0.4.dot  m100_n100_1_k1_seed2_loss0.1.B  m100_n100_1_k1_seed2_loss0.1.dot  m100_n100_1_k1_seed2_loss0.2.B  m100_n100_1_k1_seed2_loss0.2.dot  m100_n100_1_k1_seed2_loss0.4.B  m100_n100_1_k1_seed2_loss0.4.dot  m100_n100_1_k1_seed3_loss0.1.B  m100_n100_1_k1_seed3_loss0.1.dot  m100_n100_1_k1_seed3_loss0.2.B  m100_n100_1_k1_seed3_loss0.2.dot  m100_n100_1_k1_seed3_loss0.4.B  m100_n100_1_k1_seed3_loss0.4.dot  m100_n100_1_k2_seed1_loss0.1.B  m100_n100_1_k2_seed1_loss0.1.dot  m100_n100_1_k2_seed1_loss0.2.B  m100_n100_1_k2_seed1_loss0.2.dot  m100_n100_1_k2_seed1_loss0.4.B  m100_n100_1_k2_seed1_loss0.4.dot  m100_n100_1_k2_seed2_loss0.1.B  m100_n100_1_k2_seed2_loss0.1.dot  m100_n100_1_k2_seed2_loss0.2.B  m100_n100_1_k2_seed2_loss0.2.dot  m100_n100_1_k2_seed2_loss0.4.B  m100_n100_1_k2_seed2_loss0.4.dot  m100_n100_1_k2_seed3_loss0.1.B  m100_n100_1_k2_seed3_loss0.1.dot  m100_n100_1_k2_seed3_loss0.2.B  m100_n100_1_k2_seed3_loss0.2.dot  m100_n100_1_k2_seed3_loss0.4.B  m100_n100_1_k2_seed3_loss0.4.dot  m100_n100_1_k3_seed1_loss0.1.B  m100_n100_1_k3_seed1_loss0.1.dot  m100_n100_1_k3_seed1_loss0.2.B  (+9768 more)
data/perfect_phylogeny/: generate.sh  m100_n100_s1.txt  m100_n100_s10.txt  m100_n100_s11.txt  m100_n100_s12.txt  m100_n100_s13.txt  m100_n100_s14.txt  m100_n100_s15.txt  m100_n100_s16.txt  m100_n100_s17.txt  m100_n100_s18.txt  m100_n100_s19.txt  m100_n100_s2.txt  m100_n100_s20.txt  m100_n100_s3.txt  m100_n100_s4.txt  m100_n100_s5.txt  m100_n100_s6.txt  m100_n100_s7.txt  m100_n100_s8.txt  m100_n100_s9.txt  m100_n250_s1.txt  m100_n250_s10.txt  m100_n250_s11.txt  m100_n250_s12.txt  m100_n250_s13.txt  m100_n250_s14.txt  m100_n250_s15.txt  m100_n250_s16.txt  m100_n250_s17.txt  m100_n250_s18.txt  m100_n250_s19.txt  m100_n250_s2.txt  m100_n250_s20.txt  m100_n250_s3.txt  m100_n250_s4.txt  m100_n250_s5.txt  m100_n250_s6.txt  m100_n250_s7.txt  m100_n250_s8.txt  (+501 more)
result/: README.md  SiFit.taxa.txt  generate_sweep_results.sh  parseSiFit.py  plots.ipynb  processSCITE.py  processSCITE.sh  processSiFitSweep.sh  processSweep.sh  result_sweep.csv
result/CRC1/: CRC1.SiFit.dot  CRC1.SiFit.input_mlTree.newick  CRC1.tree  CRC1_cell.SiFit.labels  SCITE.dot  SPhyR_k1.dot  runSPhyR.sh  runSiFit.sh
result/flip_SASC/: m50_n50_s10_k1_loss0.1_a0.001_b0.2_mlt.gv  m50_n50_s10_k1_loss0.1_a0.001_b0.2_out.txt  m50_n50_s10_k1_loss0.2_a0.001_b0.2_mlt.gv  m50_n50_s10_k1_loss0.2_a0.001_b0.2_out.txt  m50_n50_s10_k1_loss0.4_a0.001_b0.2_mlt.gv  m50_n50_s10_k1_loss0.4_a0.001_b0.2_out.txt  m50_n50_s11_k1_loss0.1_a0.001_b0.2_mlt.gv  m50_n50_s11_k1_loss0.1_a0.001_b0.2_out.txt  m50_n50_s11_k1_loss0.2_a0.001_b0.2_mlt.gv  m50_n50_s11_k1_loss0.2_a0.001_b0.2_out.txt  m50_n50_s11_k1_loss0.4_a0.001_b0.2_mlt.gv  m50_n50_s11_k1_loss0.4_a0.001_b0.2_out.txt  m50_n50_s12_k1_loss0.1_a0.001_b0.2_mlt.gv  m50_n50_s12_k1_loss0.1_a0.001_b0.2_out.txt  m50_n50_s12_k1_loss0.2_a0.001_b0.2_mlt.gv  m50_n50_s12_k1_loss0.2_a0.001_b0.2_out.txt  m50_n50_s12_k1_loss0.4_a0.001_b0.2_mlt.gv  (+103 more)
script/: SCITE2SIFIT.py  constraintCount.py  convertGvToTree.py  convertToSCITE.py  generateForbiddenPairs.py
src/: analyzemain.cpp  callback.cpp  callback.h  cluster.cpp  cluster.h  columngen.cpp  columngen.h  columngenflip.cpp  columngenflip.h  columngenflipclustered.cpp  columngenflipclustered.h  comparison.cpp  comparison.h  coordinateascent.cpp  coordinateascent.h  dollocallback.h  dolloheuristic.cpp  dolloheuristic.h  dollomain.cpp  dollophylogenetictree.cpp  dollophylogenetictree.h  ilpsolverdollo.cpp  ilpsolverdollo.h  ilpsolverdolloflip.cpp  ilpsolverdolloflip.h  ilpsolverdolloflipcluster.cpp  ilpsolverdolloflipcluster.h  ilpsolverdolloflipclustered.cpp  ilpsolverdolloflipclustered.h  kdpfcmain.cpp  kdpfmain.cpp  kdpmain.cpp  matrix.cpp  matrix.h  perturbmain.cpp  phylogenetictree.cpp  phylogenetictree.h  simulatemain.cpp  utils.cpp  utils.h  (+1 more)
(+6 files in other folders)
